--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python-3.6.5
 certifi==2018.8.24
 chardet==3.0.4
 defusedxml==0.5.0
@@ -20,3 +21,4 @@ social-auth-app-django==2.1.0
 social-auth-core==1.7.0
 urllib3==1.23
 whitenoise==4.1
+
