--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ psycopg2==2.7.5
 PyJWT==1.6.4
 python3-openid==3.1.0
 pytz==2018.5
-requests==2.19.1
+requests>=2.20.0
 requests-oauthlib==1.0.0
 six==1.11.0
 social-auth-app-django==2.1.0
